[package]
edition = "2021"
name = "poetry"
version = "0.1.0"
[dependencies]
async-trait = "*"
chrono = "*"
futures = "*"
thiserror = "1.0"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.semver]
features = ["serde"]
version = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.toml]
features = ["preserve_order"]
version = "*"

[dev-dependencies]
cucumber = "0.13"
anyhow = "1.0"
enum-as-inner = "0.5.1"

tempfile = "3"
num_cpus = "1.13.1"

[[test]]
name = "init"
path = "tests/cucumber/init/mod.rs"
harness = false