[package]
edition = "2021"
name = "poetry"
version = "0.1.0"
[dependencies]
async-trait = "*"
chrono = "*"
futures = "*"
thiserror = "1.0"
derive_builder = "0.11.2"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.semver]
features = ["serde"]
version = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.toml]
features = ["preserve_order"]
version = "*"

[dev-dependencies]
cucumber = "0.14.1"
anyhow = "1.0"
enum-as-inner = "0.5.1"

tempfile = "3"
num_cpus = "1.13.1"
derive_builder = "0.11.2"
log = "0.4.17"

[[test]]
name = "init"
path = "tests/cucumber/init/mod.rs"
harness = false

[[test]]
name = "add"
path = "tests/cucumber/add/mod.rs"
harness = false
