[package]
edition = "2021"
name = "poetry"
version = "0.1.0"
[dependencies]
async-trait = "*"
chrono = "*"
derive_builder = "0.11.2"
futures = "*"
git-url-parse = "0.4.2"
thiserror = "1.0"
git2 = "0.15.0"
dirs = "4.0.0"
vfs = "0.7.1"

[dependencies.reqwest]
features = ["json"]
version = "0.11"

[dependencies.semver]
features = ["serde"]
version = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.toml]
features = ["preserve_order"]
version = "*"

[dev-dependencies]
anyhow = "1.0"
cucumber = "0.14.1"
enum-as-inner = "0.5.1"

derive_builder = "0.11.2"
log = "0.4.17"
num_cpus = "1.13.1"
tempfile = "3"

[[test]]
harness = false
name = "init"
path = "tests/cucumber/init/mod.rs"

[[test]]
harness = false
name = "add"
path = "tests/cucumber/add/mod.rs"
